[package]
name       = "cometbft-light-client-verifier"
version    = "0.1.0-alpha.2"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cometbft", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository = "https://github.com/cometbft/cometbft-rs"
authors    = [
  "Informal Systems <hello@informal.systems>",
]

description = """
    Implementation of the CometBFT Light Client Verification Algorithm.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "rust-crypto"]
rust-crypto = ["cometbft/rust-crypto"]
std = [
    "flex-error/std",
    "cometbft/std",
    "cometbft-proto/std",
    "serde/std",
    "time/std",
    "base64/std",
    "hex/std",
    "prost/std",
]

[dependencies]
cometbft = { version = "0.1.0-alpha.2", path = "../cometbft", default-features = false }
cometbft-proto = { version = "0.1.0-alpha.2", path = "../proto", default-features = false }

derive_more = { version = "0.99.5", default-features = false, features = ["display"] }
serde = { version = "1.0.106", default-features = false }
time = { version = "0.3", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
prost = { version = "0.13.5", default-features = false }
blst = { version = "0.3.11", default-features = false }

[dev-dependencies]
cometbft-testgen = { path = "../testgen", default-features = false }
cometbft-rpc = { path = "../rpc", features = ["http-client"] }
sha2 = { version = "0.10", default-features = false }
serde_json = { version = "1.0.106", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
blst = { version = "0.3.11", default-features = false }
sha3 = "0.10.8"
